# safepkg

./: Cargo.toml  README.md  feasibility_report.md  testing_strategy.md
common/: Cargo.toml
common/src/: lib.rs
ebpf/: Cargo.toml
ebpf/src/: main.rs
userspace/: Cargo.toml
userspace/src/: engine.rs  main.rs  monitor.rs  sandbox.rs
