[package]
name = "safepkg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
safepkg-common = { path = "../common", features = ["user"] }

[target."cfg(target_os = \"linux\")".dependencies]
aya = { version = "0.11", features = ["async_tokio"] }

